--- a/QualityCheck1.ipynb
+++ b/QualityCheck1.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dfe6920b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c3f8758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +34,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0383b4f",
    "metadata": {},
    "source": [
     "# Experimental data preparation"
@@ -45,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ac760568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0a2b2d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +63,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ec801e31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b87c2a1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7f11973f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b6f8468b",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a17f5c59",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +160,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "52d53b50",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +190,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8614d1e0",
    "metadata": {},
    "source": [
     "# Simulation data preparation"
@@ -210,7 +198,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "77a35b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "85d4be1b",
    "metadata": {
     "scrolled": false
    },
@@ -247,7 +233,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4c56c299",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +253,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f95f79",
    "metadata": {},
    "source": [
     "## Filter out configurations with short AP or too deep AHP"
@@ -277,7 +261,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a552c429",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +301,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "25eeec76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +318,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8e5ccff9",
    "metadata": {
     "scrolled": false
    },
@@ -360,7 +341,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03fd6430",
    "metadata": {},
    "source": [
     "# Comparing curves for hyperpolarizing and depolarizing current steps"
@@ -369,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ed62c78f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +382,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d3fc5e56",
    "metadata": {
     "scrolled": false
    },
@@ -427,7 +405,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f12b664",
    "metadata": {},
    "source": [
     "# Comparing curves for depolarizing current steps with and without $K_M$"
@@ -435,7 +412,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4da4abc",
    "metadata": {},
    "source": [
     "## Remove individuals that fires spontaneously after $K_M$ blockade"
@@ -444,7 +420,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "066952b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +442,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c63a8ba0",
    "metadata": {
     "scrolled": false
    },
@@ -491,7 +465,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "050137b3",
    "metadata": {},
    "source": [
     "## Baseline voltage"
@@ -500,7 +473,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fb32e789",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +567,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "43db14cc",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +660,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "754a8144",
    "metadata": {},
    "source": [
     "## Compare f-I curves between control and after $K_M$ blockade"
@@ -698,7 +668,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e06fcfef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +679,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a89bd46a",
    "metadata": {
     "scrolled": true
    },
@@ -747,7 +715,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "28182c0a",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +736,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498e7454",
    "metadata": {},
    "source": [
     "# Compare simulated and experimental curves after selection"
@@ -778,7 +744,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fcc08213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +754,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e4c0f40a",
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +774,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5d8b4a10",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +794,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "79b47589",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +824,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca7188d6",
    "metadata": {},
    "source": [
     "# Save models to files"
@@ -871,7 +832,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d27b158d",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +852,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "489b0f82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +868,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "daa44790",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +879,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -935,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
